--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "### Desenvolvido em JavaScript e Node.js",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon -e js,json,mustache src/server.js"
   },
@@ -19,9 +20,11 @@
   "homepage": "https://github.com/DennyAzevedo/nodejs-canil#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "mustache-express": "^1.3.2"
+    "mustache-express": "^1.3.2",
+    "router": "^1.3.7"
   },
   "devDependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
   }
 }
